--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-        <a class="navbar-brand" href="#"><img class="img-fluid rounded-circle" style="width: 50px;" src="img/final.png"></a>
+        <a class="navbar-brand" href="/"><img class="img-fluid rounded-circle" style="width: 50px;" src="img/final.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -25,13 +25,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Facebook</a>
+              <a class="nav-link" href="https://www.facebook.com/RealmOfPhymathics">Facebook</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Instagram</a>
+                <a class="nav-link" href="https://www.instagram.com/realm_of_phymathics/">Instagram</a>
               </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -85,7 +85,7 @@
                     </div>
                         <div class="col-sm-6 col-lg-12 col-md-6">
                         <div class="hero-post mb-5">
-                            <img class="img-fluid" alt="programming" src="img/pic.jpg" >
+                            <img class="img-fluid" alt="programming" src="img/tech.jpg" >
                             </div>
                             <div class="hero-post-content">
                                 <div class="row">
@@ -115,45 +115,30 @@
                       <article class="blog-post mb-3">
                           <div class="row mt-4">
                               <div class="col-sm-4 ">
-                                  <img class="img-fluid " src="img/pic.jpg" alt="coding">
+                                <a href="blog_three.html"> <img class="img-fluid " src="img/cloud.jpg" alt="coding"> </a>
                               </div>
                               <div class="col-sm-8">
-                                  <a href="game_dev.html">  <h3 class="blog_title">Start making 2d or 3d games</h3> </a>
+                                  <a href="blog_three.html">  <h3 class="blog_title">আকাশ নীল, মেঘ সাদা; কিন্তু কেন?</h3> </a>
 
-                                  <p>Game development has exploded over the last few years <span class="only_pc">, and now it seems like everyone is making a video game. You've got big studios full</span></p>
+                                  <a href="blog_three.html"> <p>আমরা জানি, সূর্যের আলো ৭টি রঙের সমষ্টি(বেগুনি, আসমানী, নীল, সবুজ, হলুদ, কমলা, লাল)। তো এদের প্রত্যেকেরই তরঙ্গদৈর্ঘ্য আলাদা থাকে।</p> </a>
                                   <div class="badge">
-                                      <a href="#">Making games</a>
-                                      <a href="#">3d/2d games</a>
+                                      <a href="">Cloud</a>
+                                      <a href="">Rain</a>
                                   </div>
                               </div>
                           </div>
                       </article>
-                      <!-- <article class="blog-post mb-3">
-                    <div class="row blog-post-container mt-4">
-                        <div class="col-sm-4 -container ">
-                            <img class="img-fluid " src="img/pic.jpg" alt="coding">
-                        </div>
-                        <div class="col-sm-8">
-                            <h3 m-0 mt-2 class="blog_title">My blog  post title</h3>
-                            <p class="blog_des"> <span class="only_pc">Computer programming is the process of designing and building an executable computer program to accomplish a specific computing result. </span> </p>
-                        <div class="badge">
-                            <a class="badge_text" href="#">Technology</a>
-                            <a class="badge_text" href="#">Programming</a>
-                        </div>
-                        </div>
-                    </div>
-                </article> -->
                       <article class="blog-post mb-3">
                           <div class="row mt-4">
                               <div class="col-sm-4 ">
-                                  <img class="img-fluid " src="img/pic.jpg" alt="coding">
+                                <a href="water.html"> <img class="img-fluid " src="img/water.jpg" alt="coding"> </a>
                               </div>
                               <div class="col-sm-8">
-                                  <h3 m-0 mt-2 class="blog_title">My blog  post title</h3>
-                                  <p>Computer programming is the process of designing and building <span class="only_pc">an executable computer program to accomplish a specific computing result. </span> </p>
+                                <a href="water.html"> <h3 m-0 mt-2 class="blog_title">পানির ব্যতিক্রম প্রসারণ</h3> </a>
+                                <a href="water.html"> <p>সকল পদার্থেই একটি সাধারণ ধর্ম হলো, " তাপ দিলে সেই পদার্থের আয়তন বৃদ্ধি পায় আর হ্রাস করলে আয়তনও কমে যায়"। পানিও তার ব্যতিক্রম নয়।</p> </a>
                                   <div class="badge">
-                                      <a href="#">Technology</a>
-                                      <a href="#">Programming</a>
+                                      <a href="">Water</a>
+                                      <a href="">Aqua</a>
                                   </div>
                               </div>
                           </div>
@@ -161,50 +146,20 @@
                       <article class="blog-post mb-3">
                           <div class="row only_pc mt-4">
                               <div class="col-sm-4 ">
-                                  <img class="img-fluid " src="img/pic.jpg" alt="coding">
+                                 <a href="water_part_two.html"> <img class="img-fluid " src="img/warter_two.jpg" alt="coding"> </a>
                               </div>
                               <div class="col-sm-8">
                                   <div>
-                                      <h3 m-0 mt-2 class="blog_title">My blog  post title</h3>
+                                      <a href="water_part_two.html">   <h3 m-0 mt-2 class="blog_title">পানির ব্যতিক্রম প্রসারণ part-2</h3> </a>
                                   </div>
-                                  <p>Computer programming is the process of designing and building <span class="only_pc">an executable computer program to accomplish a specific computing result. </span> </p>
+                                  <a href="water_part_two.html">  <p>শীতপ্রধান দেশে তাপমাত্রা অনেক হ্রাস পেতে থাকে যার ফলে সেখানকার নদ-নদী, হ্রদ, পুকুর,খাল এবং অন্যান্য জলীয় অংশ বরফে পরিণত হয়।</p></a>
                                   <div class="badge blog-badge">
-                                      <a href="#">Technology</a>
-                                      <a href="#">Programming</a>
+                                      <a href="/">Water</a>
+                                      <a href="/">Aqua</a>
                                   </div>
                               </div>
                           </div>
-                      </article>
-                      <article class="blog-post mb-3">
-                          <div class="row mt-4">
-                              <div class="col-sm-4 ">
-                                  <img class="img-fluid " src="img/pic.jpg" alt="coding">
-                              </div>
-                              <div class="col-sm-8">
-                                  <h3 m-0 mt-2 class="blog_title">My blog  post title</h3>
-                                  <p>Computer programming is the process of designing and building <span class="only_pc">an executable computer program to accomplish a specific computing result. </span> </p>
-                                  <div class="badge">
-                                      <a href="#">Technology</a>
-                                      <a href="#">Programming</a>
-                                  </div>
-                              </div>
-                          </div>
-                      </article>
-                      <article class="blog-post mb-3">
-                          <div class="row mt-4">
-                              <div class="col-sm-4 ">
-                                  <img class="img-fluid " src="img/pic.jpg" alt="coding">
-                              </div>
-                              <div class="col-sm-8">
-                                  <h3 m-0 mt-2 class="blog_title">My blog  post title</h3>
-                                  <p>Computer programming is the process of designing and building <span class="only_pc">an executable computer program to accomplish a specific computing result. </span> </p>
-                                  <div class="badge">
-                                      <a href="#">Technology</a>
-                                      <a href="#">Programming</a>
-                                  </div>
-                              </div>
-                          </div>
-                      </article>
+                      </article> 
                       <div class="only_pc numbers">
                           <p class="number">1</p>
                           <p class="number">2</p>
@@ -229,13 +184,13 @@
 
                       <div class="social-links only_pc row text-center">
                           <div class="col-sm-4 col-md-4 py-4">
-                              <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                              <a href="https://www.facebook.com/RealmOfPhymathics" style="color: #1f2833;"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
                           </div>
                           <div class="col-sm-4 col-md-4 py-4 secondary-icon">
-                              <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                              <a href="https://www.instagram.com/realm_of_phymathics/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                           </div>
                           <div class="col-sm-4 col-md-4 py-4">
-                              <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                              <a href="https://www.facebook.com/RealmOfPhymathics" style="color: #1f2833;" ><i class="fa fa-envelope" aria-hidden="true"></i></a>
                           </div>
                       </div>
 
@@ -250,56 +205,38 @@
                           <div class="programmers-img">
                               <article class="row mb-4">
                                   <div class="col-sm-4">
-                                      <img src="img/final.png" alt="java" class="img-fluid rounded-circle">
+                                    <a href="water.html"> <img src="img/water.jpg" style="height: 90px;" alt="java" class="img-fluid rounded-circle"> </a> 
                                   </div>
                                   <div class="col-sm-8">
-                                      <h5 class="mb-0">James Gosling</h5>
-                                      <p>The creator of Java hich is one of the popular programming language. </p>
+                                    <a href="water.html"> <h5 class="mb-0">পানির ব্যতিক্রম প্রসারণ</h5> </a> 
+                                        <a href="water.html"> <p>তাপ দিলে পদার্থের আয়তন বৃদ্ধি পায় আর হ্রাস করলে আয়তনও কমে যায়... </p> </a> 
                                   </div>
                               </article>
                               <article class="row mb-4">
                                   <div class="col-sm-4">
-                                      <img src="img/final.png" alt="python" class="img-fluid rounded-circle">
+                                    <a href="water_part_two.html"> <img src="img/warter_two.jpg" alt="python" style="height: 90px;" class="img-fluid rounded-circle"> </a> 
                                   </div>
                                   <div class="col-sm-8">
-                                      <h5 class="mb-0">Guido Van Rossum</h5>
-                                      <p>The creator of python which is the most trending programming language. </p>
+                                    <a href="water_part_two.html">  <h5 class="mb-0">পানির ব্যতিক্রম প্রসারণ Part-2</h5> </a>  
+                                    <a href="water_part_two.html"> <p>শীতপ্রধান দেশে তাপমাত্রা অনেক হ্রাস পেতে থাকে....</p> </a> 
                                   </div>
                               </article>
                               <article class="row mb-4">
                                   <div class="col-sm-4">
-                                      <img src="img/final.png" alt="java" class="img-fluid rounded-circle">
+                                    <a href="blog_three.html">  <img src="img/cloud.jpg" alt="java" style="height: 90px;" class="img-fluid rounded-circle"> </a>
                                   </div>
                                   <div class="col-sm-8">
-                                      <h5 class="mb-0">Ken Thompson</h5>
-                                      <p>The creator of Unix operating system . </p>
-                                  </div>
-                              </article>
-                              <article class="row mb-4">
-                                  <div class="col-sm-4">
-                                      <img src="img/final.png" alt="java" class="img-fluid rounded-circle">
-                                  </div>
-                                  <div class="col-sm-8">
-                                      <h5 class="mb-0">Tim Berners-Lee</h5>
-                                      <p>The creator of World Wide Web . </p>
-                                  </div>
-                              </article>
-                              <article class="row mb-4">
-                                  <div class="col-sm-4">
-                                      <img src="img/final.png" alt="java" class="img-fluid rounded-circle">
-                                  </div>
-                                  <div class="col-sm-8">
-                                      <h5 class="mb-0">Dennis_Ritchie</h5>
-                                      <p>The creator C programming language one of the most used programming language.</p>
+                                    <a href="blog_three.html">  <h5 class="mb-0">আকাশ নীল, মেঘ সাদা; কিন্তু কেন?</h5> </a>
+                                    <a href="blog_three.html">   <p>আমরা জানি, সূর্যের আলো ৭টি রঙের সমষ্টি.... </p> </a>
                                   </div>
                               </article>
                           </div>
                       </div>
                       <h4 class="aside-heading mt-4 pl-2">Categories</h4>
                       <div class="badges w=100">
-                          <a href="#">Math</a>
-                          <a href="#">Physics</a>
-                          <a href="#">It</a>
+                          <a href="">Math</a>
+                          <a href="">Physics</a>
+                          <a href="">It</a>
                       </div>
               </div>
               </aside>
@@ -323,9 +260,9 @@
             <div class="col-lg-4  justify-content-center pb-3 ">
                 <h3 class="text-center" >Around the Web</h3>
                 <div class="links d-flex justify-content-around">
-                    <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a> 
+                    <a href="https://www.facebook.com/RealmOfPhymathics"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/realm_of_phymathics/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="https://www.facebook.com/RealmOfPhymathics"><i class="fa fa-envelope" aria-hidden="true"></i></a> 
                 </div>
 
             </div>
@@ -335,9 +272,9 @@
             </div>
         </div>
 
-        <div class="copyright  d-flex justify-content-center">
-            <p>©2020 Iron Shark Adi</p>
-        </div>
+        <a href="http://ironshark.gq/" > <div class="copyright  d-flex justify-content-center">
+            <p style="color: #66fcf234 ;">©2020 Iron Shark Adi</p> =
+        </div> </a>
     </div>
 
 </body>
