--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         </div>
 
         <a href="http://ironshark.gq/" > <div class="copyright  d-flex justify-content-center">
-            <p style="color: #66fcf234 ;">©2020 Iron Shark Adi</p> =
+            <p style="color: #66fcf234 ;">©2020 Iron Shark Adi</p> 
         </div> </a>
     </div>
 
