--- a/index.html
+++ b/index.html
@@ -160,6 +160,42 @@
                               </div>
                           </div>
                       </article> 
+                      <article class="blog-post mb-3">
+                        <div class="row only_pc mt-4">
+                            <div class="col-sm-4 ">
+                               <a href="water_part_two.html"> <img class="img-fluid " src="img/3_min.jpg" alt="coding"> </a>
+                            </div>
+                            <div class="col-sm-8">
+                                <div>
+                                    <a href="water_part_two.html">   <h3 m-0 mt-2 class="blog_title">Machine Learning</h3> </a>
+                                </div>
+                                <a href="water_part_two.html">  <p>গল্প ০১ঃ 
+                                    এনায়েত আজ প্রথম তার ফেসবুক একাউন্টটি খুললো। শুরুতেই দুইজন চেনা মানুষের নাম সার্চ দিয়ে ফ্রেন্ড রিকুয়েস্ট পাঠালো। </p></a>
+                                <div class="badge blog-badge">
+                                    <a href="/">Water</a>
+                                    <a href="/">Aqua</a>
+                                </div>
+                            </div>
+                        </div>
+                    </article> 
+                    
+                    <article class="blog-post mb-3">
+                        <div class="row only_pc mt-4">
+                            <div class="col-sm-4 ">
+                               <a href="water_part_two.html"> <img class="img-fluid " src="img/supermoon.jpg" alt="coding"> </a>
+                            </div>
+                            <div class="col-sm-8">
+                                <div>
+                                    <a href="water_part_two.html">   <h3 m-0 mt-2 class="blog_title">সুপারমুন ও চন্দ্রগ্রহণ</h3> </a>
+                                </div>
+                                <a href="water_part_two.html"><p>রক্তিম চাঁদকে আকাশে দেখে অভিভূত বিশ্ববাসী । শুধু রক্তিম চাঁদ নয় সেই সঙ্গে ঘটেছে আরো দুটি মহাজাগতিক ঘটনা-  সুপারমুন ও চন্দ্রগ্রহণ । </p></a>
+                                <div class="badge blog-badge">
+                                    <a href="/">Water</a>
+                                    <a href="/">Aqua</a>
+                                </div>
+                            </div>
+                        </div>
+                    </article>
                       <div class="only_pc numbers">
                           <p class="number">1</p>
                           <p class="number">2</p>
@@ -195,7 +231,7 @@
                       </div>
 
 
-                      <!------------------------------------------------Popular programmers section (Aside)--------------------------------------------------------->
+                      <!--------------------------------------------------------------------------------------------------------->
 
 
                       <div class="only_pc">
