added and fixed 2 more blogs

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-63856NRWWM"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-63856NRWWM');
+    </script>
 </head>
+
 <body>
 
 
@@ -163,13 +173,13 @@
                       <article class="blog-post mb-3">
                         <div class="row only_pc mt-4">
                             <div class="col-sm-4 ">
-                               <a href="water_part_two.html"> <img class="img-fluid " src="img/3_min.jpg" alt="coding"> </a>
+                               <a href="machine.html"> <img class="img-fluid " src="img/3_min.jpg" alt="coding"> </a>
                             </div>
                             <div class="col-sm-8">
                                 <div>
-                                    <a href="water_part_two.html">   <h3 m-0 mt-2 class="blog_title">Machine Learning</h3> </a>
+                                    <a href="machine.html">   <h3 m-0 mt-2 class="blog_title">Machine Learning</h3> </a>
                                 </div>
-                                <a href="water_part_two.html">  <p>গল্প ০১ঃ 
+                                <a href="machine.html">  <p>গল্প ০১ঃ 
                                     এনায়েত আজ প্রথম তার ফেসবুক একাউন্টটি খুললো। শুরুতেই দুইজন চেনা মানুষের নাম সার্চ দিয়ে ফ্রেন্ড রিকুয়েস্ট পাঠালো। </p></a>
                                 <div class="badge blog-badge">
                                     <a href="/">Water</a>
@@ -182,13 +192,13 @@
                     <article class="blog-post mb-3">
                         <div class="row only_pc mt-4">
                             <div class="col-sm-4 ">
-                               <a href="water_part_two.html"> <img class="img-fluid " src="img/supermoon.jpg" alt="coding"> </a>
+                               <a href="supermoon.html"> <img class="img-fluid " src="img/supermoon.jpg" alt="coding"> </a>
                             </div>
                             <div class="col-sm-8">
                                 <div>
-                                    <a href="water_part_two.html">   <h3 m-0 mt-2 class="blog_title">সুপারমুন ও চন্দ্রগ্রহণ</h3> </a>
+                                    <a href="supermoon.html">   <h3 m-0 mt-2 class="blog_title">সুপারমুন ও চন্দ্রগ্রহণ</h3> </a>
                                 </div>
-                                <a href="water_part_two.html"><p>রক্তিম চাঁদকে আকাশে দেখে অভিভূত বিশ্ববাসী । শুধু রক্তিম চাঁদ নয় সেই সঙ্গে ঘটেছে আরো দুটি মহাজাগতিক ঘটনা-  সুপারমুন ও চন্দ্রগ্রহণ । </p></a>
+                                <a href="supermoon.html"><p>রক্তিম চাঁদকে আকাশে দেখে অভিভূত বিশ্ববাসী । শুধু রক্তিম চাঁদ নয় সেই সঙ্গে ঘটেছে আরো দুটি মহাজাগতিক ঘটনা-  সুপারমুন ও চন্দ্রগ্রহণ । </p></a>
                                 <div class="badge blog-badge">
                                     <a href="/">Water</a>
                                     <a href="/">Aqua</a>
